--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -11,9 +11,9 @@
 .containerFormulario{
     display: flex;
     flex-direction: column;
-    width: 360px;
+    width: 400px;
     min-height: 350px;
-    background-color: #EEEEEE;
+    background-color: #FFFFFF;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     padding-bottom: 20px;
@@ -23,20 +23,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0f0b3b;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
 }
 
 .logoImg{
-    margin: 10px 0;
-    height: 100px;
+    margin: 10px 0 0 0;
+    height: 200px;
 }
 
 .title{
     text-align: center;
-    padding: 10px 0;
-    color: #0f0b3b;
+    color: #A9AABC;
+    text-transform: uppercase;
 }
 
 .formulario{
@@ -45,7 +42,7 @@
     align-items: center;
     justify-content: center;
     padding: 0 25px;
-    margin: 10px 0;
+    margin: 15px 0;
 }
 
 .contentInputs{
@@ -73,7 +70,7 @@
 }
 
 .icons{
-    color:#0f0b3b;
+    color:#A9AABC;
     font-size: 20px;
 }
 
@@ -87,15 +84,32 @@
     width: 100%;
     height: 40px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    transition: 0.3s ease-in-out;
 }
 
 .buttonAccess:hover{
     cursor:pointer;
+    background-color: #3D8A87;
+}
+
+.buttonRegister{
+    background-color: #00B495;
+    color:#FFFFFF;
+    font-size: 12px;
+    text-transform: uppercase;
+    border:none;
+    border-radius: 10px;
+    width: 100%;
+    height: 40px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .links{
     text-align: center;
     text-decoration: none;
+    text-transform: uppercase;
     margin-top: 10px;
-    font-size: 14px;
+    font-size: 12px;
+    font-weight: bold;
+    color:#1F3876;
 }
