--- a/src/pages/SignUp/SignUp.module.css
+++ b/src/pages/SignUp/SignUp.module.css
@@ -23,16 +23,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 25px;
 }
 
 .logoImg{
     margin: 10px 0 0 0;
-    height: 200px;
+    width: 100%;
 }
 
 .title{
     text-align: center;
     color: #8a8b99;
+    margin-top: 10px;
 }
 
 .formulario{
