--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -1,52 +1,13 @@
-.containerSiderbar {
-    position: fixed;
-    width: 200px;
-    height: 100vh;
-    background: #00134A;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-.containerLogo{
-    display: flex;
-    width: 100%;
-    height: 60px;
-    background-color: #FFFFFF;
-    justify-content: center;
-    align-items: center;
-    border-bottom:1px solid #7a9bff;
-}
-
-.containerLinks{
-    padding: 10px 0;
-}
-
-.links{
-    width: 100%;
-    height: 45px;
+.title{
     display: flex;
     flex-direction: row;
-    justify-content: start;
     align-items: center;
-    padding: 0 10px;
-    transition: 0.1s ease-in-out;
+    border-radius: 5px;
+    background-color: #b43030;
+    padding: .8em;
 }
 
-.links:hover{
-    cursor: pointer;
-    background-color: #00639C;
-}
-
-.linksIcons{
-    color:#FFFFFF;
-    margin-right: 10px;
-} 
-
-.linksTitle{
-    text-decoration: none;
-    color:#FFFFFF;
-    font-size: 14px;
-}
-
-.logoImg{
-    height: 50px;
+.title span{
+    margin-left: 1em;
+    font-size: 1.5em;
 }
