--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -8,11 +8,10 @@
     height: 100%;
 }
 
-.containerFormulario{
+.containerForm{
     display: flex;
     flex-direction: column;
-    width: 400px;
-    min-height: 350px;
+    width: 350px;
     background-color: #FFFFFF;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
@@ -28,7 +27,7 @@
 
 .logoImg{
     margin: 10px 0 0 0;
-    width: 100%;
+    height: 110px;
 }
 
 .title{
@@ -37,7 +36,7 @@
     margin-top: 10px;
 }
 
-.formulario{
+.form{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,7 +84,7 @@
     width: 100%;
     height: 40px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    transition: 0.3s ease-in-out;
+    transition: 0.2s ease-in-out;
 }
 
 .buttonAccess:hover{
