--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -3,11 +3,14 @@
     flex-direction: row;
     align-items: center;
     border-radius: 5px;
-    background-color: #b43030;
     padding: .8em;
+    width: 100%;
+    box-shadow: 0px 3px 6px #00000029;
+    color:#4A4C4E;
+    background-color: #FFFFFF;
 }
 
 .title span{
     margin-left: 1em;
-    font-size: 1.5em;
+    font-size: 16px
 }
