--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -1,7 +1,80 @@
-.content{
+.content {
     margin-left: 200px;
     width: calc(100% -200px);
     min-height: 100vh;
     padding: 20px;
     background-color: #EEEEEE;
+}
+
+.container {
+    background-color: #FFFFFF;
+    box-shadow: 0px 3px 6px #00000029;
+    margin-top: 20px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.containerForm {
+    display: flex;
+    flex-direction: column;
+}
+
+.contentAvatar {
+    background-color: #3A3756;
+    width: 180px;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.contentAvatar input {
+    display: none;
+}
+
+.containerForm label {
+    color: #4A4767;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.iconAddAvatar {
+    position: absolute;
+    z-index: 3;
+}
+
+.inputs {
+    width: 100% !important;
+    max-width: 550px;
+    height: 45px;
+    border-radius: 5px;
+    width: 90%;
+    border: 0.5px solid #bebebe;
+    color: #4A4767;
+    padding: 0 10px;
+    margin-bottom: 20px;
+}
+
+.buttonToSave {
+    width: 100%;
+    max-width: 550px;
+    height: 45px;
+    background-color: #00B495;
+    color: #FFFFFF;
+    font-size: 12px;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 10px;
+    width: 100%;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+
+.buttonToSave:hover {
+    cursor: pointer;
+    background-color: #3D8A87;
 }
