--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -21,15 +21,15 @@
 }
 
 .contentAvatar {
-    background-color: #3A3756;
-    width: 180px;
-    height: 180px;
+    width: 200px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
     cursor: pointer;
+    margin-bottom: 30px!important;
 }
 
 .contentAvatar input {
@@ -47,9 +47,13 @@
     z-index: 3;
 }
 
+.photoProfile {
+    border-radius: 50%;
+}
+
 .inputs {
     width: 100% !important;
-    max-width: 550px;
+    max-width: 450px;
     height: 45px;
     border-radius: 5px;
     width: 90%;
@@ -59,11 +63,11 @@
     margin-bottom: 20px;
 }
 
-.buttonToSave {
+.buttonToSave,
+.buttonToCancel {
     width: 100%;
-    max-width: 550px;
+    max-width: 200px;
     height: 45px;
-    background-color: #00B495;
     color: #FFFFFF;
     font-size: 12px;
     text-transform: uppercase;
@@ -71,10 +75,34 @@
     border-radius: 10px;
     width: 100%;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    transition: 0.2 ease-in-out;
 }
 
+.buttonToSave {
+    background-color: #00B495;
+}
+
+.buttonToCancel {
+    background-color: #AC373C;
+}
+
+.buttonToSave:hover,
+.buttonToCancel:hover {
+    cursor: pointer;
+}
 
 .buttonToSave:hover {
-    cursor: pointer;
     background-color: #3D8A87;
+}
+
+.buttonToCancel:hover {
+    background-color: #8a0f15;
+}
+
+.actions {
+    margin-top: 10px;
+    display: flex;
+    width: 100% !important;
+    max-width: 450px;
+    justify-content: space-between;
 }
