--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -5,3 +5,47 @@
     padding: 20px;
     background-color: #EEEEEE;
 }
+
+.container {
+    background-color: #FFFFFF;
+    box-shadow: 0px 3px 6px #00000029;
+    margin-top: 20px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.container span {
+    margin-bottom: 15px;
+}
+
+.buttonNewCalled {
+    width: 100%;
+    max-width: 200px;
+    height: 45px;
+    color: #FFFFFF;
+    font-size: 12px;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 10px;
+    width: 100%;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    transition: 0.2 ease-in-out;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.buttonNewCalled {
+    background-color: #00B495;
+}
+
+.buttonNewCalled:hover{
+    cursor:pointer;
+    background-color: #3D8A87;
+}
